RESOLVED FIXED 280273
[tvOS] Log an error message when a `WKWebView` is created with persistent data store
https://bugs.webkit.org/show_bug.cgi?id=280273
Summary [tvOS] Log an error message when a `WKWebView` is created with persistent dat...
Wenson Hsieh
Reported 2024-09-24 09:43:40 PDT
Attachments
Wenson Hsieh
Comment 1 2024-09-24 09:50:18 PDT
EWS
Comment 2 2024-09-24 13:05:49 PDT
Committed 284173@main (30f416474f02): <https://commits.webkit.org/284173@main> Reviewed commits have been landed. Closing PR #34172 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.