[tvOS] Log an error message when a `WKWebView` is created with persistent data store https://bugs.webkit.org/show_bug.cgi?id=280273 rdar://136591677

Reviewed by Abrar Rahman Protyasha.

Make it easier to catch instances where clients are (inadvertently) creating web views with
persistent data stores, on certain platforms.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _setupPageConfiguration:withPool:]):

Canonical link: https://commits.webkit.org/284173@main